--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"autoprefixer": "^10.4.18",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.4",
+		"jsrepo": "^1.27.0",
 		"postcss": "^8.4.37",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
